# api-template

./: .env.example  .gitignore  Makefile  docker-compose.yaml  pyproject.toml  scripts.sh
.github/workflows/: pipeline.yaml
alembic/: env.py
alembic/versions/: 72bb425dce56_create_auth_models.py
app/: main.py
app/auth/: crud.py  dependencies.py  models.py  routers.py  schemas.py  scopes.py  utils.py
app/core/: commands.py  config.py  routers.py
app/db/: base.py  dependencies.py  session.py
app/tests/: conftest.py  factories.py
app/tests/e2e/: test_auth_api.py
app/tests/integration/auth/: test_auth_users.py  test_crud.py
app/tests/unit/auth/: test_password_utils.py
