[tool.poetry]
name = "api-template"
version = "0.1.0"
description = ""
authors = ["Cristian Alvarez H <alvarezhernandezcristian1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
fastapi = {extras = ["all"], version = "^0.92.0"}
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
pydantic = "^1.10.5"
SQLAlchemy = "1.4"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.4"
click = "^8.1.3"
passlib = "^1.7.4"
python-jose = "^3.3.0"
fastapi-pagination = "^0.11.4"
pytest = "^7.2.2"
SQLAlchemy-Utils = "^0.40.0"
Faker = "^17.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
